--- a/inst/extdata/index.Rmd
+++ b/inst/extdata/index.Rmd
@@ -1,53 +1,53 @@
 ---
-title: "MSMB HTML Book Style"
-author: "Mike Smith"
+title: "PINK HTML Book Style"
+author: "Francisco Felix"
 date: "`r Sys.Date()`"
 knit: "bookdown::preview_chapter"
 site: "bookdown::bookdown_site"
 link-citations: yes
 output:
-  msmbstyle::msmb_html_book:
+  pinkstyle::pink_html_book:
     highlight: tango
     toc: TRUE
     toc_depth: 1
     split_by: chapter
     split_bib: no
     margin_references: FALSE
-bibliography: msmbstyle-ex.bib
+bibliography: pinkstyle-ex.bib
 ---
 
 # Introduction {-}
 
 ```{r setup, include=FALSE}
-library(msmbstyle)
+library(pinkstyle)
 # invalidate cache when the package version changes
-knitr::opts_chunk$set(tidy = FALSE, cache.extra = packageVersion('msmbstyle'))
+knitr::opts_chunk$set(tidy = FALSE, cache.extra = packageVersion('pinkstyle'))
 options(htmltools.dir.version = FALSE)
 ```
 
-**msmbstyle** is a styling package principally designed for the HTML version of @MSMB, with the explicit intention to closely match the layout an existing publication produced using Sweave and LaTeX.  The existing book layout was strongly influenced by the Tufte Handout style of Edward Tufte, and as such **msmbstyle** is based heavily on the [**tufte** package](https://github.com/rstudio/tufte) [@R-tufte], either calling code from that package directly, or modifying it when required. 
+**pinkstyle** is a styling package principally designed for the HTML version of @MSMB, with the explicit intention to closely match the layout an existing publication produced using Sweave and LaTeX.  The existing book layout was strongly influenced by the Tufte Handout style of Edward Tufte, and as such **pinkstyle** is based heavily on the [**tufte** package](https://github.com/rstudio/tufte) [@R-tufte], either calling code from that package directly, or modifying it when required.
 
-You can view the R Markdown documents used to create this site on [Github](https://github.com/grimbough/msmbstyle/tree/master/tests).
+You can view the R Markdown documents used to create this site on [Github](https://github.com/fhcflx/pinkstyle/tree/master/tests).
 
 ## Basic usage
 
-To produce an HTML page using *"msmbstyle"* you need to set the output to  `msmbstyle::msmb_html_book` in the yaml header of your R Markdown file.  The header used in this example site is shown below:
+To produce an HTML page using *"pinkstyle"* you need to set the output to  `pinkstyle::pink_html_book` in the yaml header of your R Markdown file.  The header used in this example site is shown below:
 
 ```yaml
-title: "MSMB HTML Book Style"
-author: "Mike Smith"
+title: "PINK HTML Book Style"
+author: "Francisco Felix"
 date: "`r Sys.Date()`"
 knit: "bookdown::preview_chapter"
 site: "bookdown::bookdown_site"
 output:
-  msmbstyle::msmb_html_book:
+  pinkstyle::pink_html_book:
     toc: TRUE
     toc_depth: 1
     split_by: chapter
     split_bib: no
     margin_references: FALSE
 link-citations: yes
-bibliography: msmbstyle-ex.bib
+bibliography: pinkstyle-ex.bib
 ```
 
 Currently it is mandatory to set `toc: TRUE` and `toc_depth: 1`.  Changing the first value will remove the list of chapters entirely which breaks the document navigation, and similarly setting the second to any other value will confuse the code that creates the drop-down navigation menu.  This will hopefully be made more configurable/robust in the future.  `split_by: chapter` is not mandatory, removing this will still prodoce a viable set of HTML pages, but the navigation will only allow you to move between the first page of each chapter.
@@ -60,7 +60,7 @@ The example below gives a (slightly convoluted) example of how to build this web
 
 ```{r, eval = FALSE}
 ## find the example Rmd files and copy to a temporary directory
-index_rmd <- list.files(system.file("extdata", package = "msmbstyle"),
+index_rmd <- list.files(system.file("extdata", package = "pinkstyle"),
                         full.names = TRUE)
 file.copy(index_rmd, tempdir())
 
@@ -69,10 +69,10 @@ file.copy(index_rmd, tempdir())
 setwd(tempdir())
 
 ## use bookdown to render the HTML pages
-bookdown::render_book('index.Rmd', output_dir = 'msmb_example')
+bookdown::render_book('index.Rmd', output_dir = 'pink_example')
 
 ## open the first page in the default system browser
-browseURL('msmb_example/index.html')
+browseURL('pink_example/index.html')
 ```
 
 ## Testing
