--- a/inst/extdata/02-questions.Rmd
+++ b/inst/extdata/02-questions.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "MSMB HTML Book Style"
+title: "PINK HTML Book Style"
 subtitle: "Example"
-author: "Mike Smith"
+author: "Francisco Felix"
 date: "`r Sys.Date()`"
 knit: "bookdown::preview_chapter"
 site: "bookdown::bookdown_site"
@@ -9,46 +9,46 @@ link-citations: yes
 monofont: "Source Code Pro"
 monofontoptions: "Scale=0.7"
 output:
-  msmbstyle::msmb_html_book:
+  pinkstyle::pink_html_book:
     highlight: tango
     toc: TRUE
     toc_depth: 1
     split_by: chapter
     margin_references: FALSE
-bibliography: msmbstyle-ex.bib
+bibliography: pinkstyle-ex.bib
 ---
 
 # Questions and Solutions
 
 In teaching material it is common to want to include questions (and possibly solutions) to the reader.  It is possible to use [custom blocks](https://bookdown.org/yihui/bookdown/custom-blocks.html) to achieve distinct styling, however this doesn't provide internal labelling, referencing and numbering.   **bookdown** doesn't current provide an environment for questions and answers, although one can manipulate the various "[theorems](https://bookdown.org/yihui/bookdown/markdown-extensions-by-bookdown.html#theorems)" to achieve something similar.
 
-**msmbstyle** provides a set of functions that can be used to demark questions and answers in the the R Markdown document.  They can be used either inline or in code chunks, and the precise usage may vary depending upon the complexity of the text you wish to include.
+**pinkstyle** provides a set of functions that can be used to demark questions and answers in the the R Markdown document.  They can be used either inline or in code chunks, and the precise usage may vary depending upon the complexity of the text you wish to include.
 
 ## Questions
 
-### Simple question 
+### Simple question
 
-If your question is simply a paragraph of text, you can use `msmbstyle::question()` and provide the paragraph via the argument `text`.  We see an example of this approach below `r tufte::margin_note('The code is shown here, but it would be more typical to hide it via \x60echo = FALSE\x60')`.
+If your question is simply a paragraph of text, you can use `pinkstyle::question()` and provide the paragraph via the argument `text`.  We see an example of this approach below `r tufte::margin_note('The code is shown here, but it would be more typical to hide it via \x60echo = FALSE\x60')`.
 
-```{r, simple-question} 
-msmbstyle::question(text = "Is this question displaying correctly?")
+```{r, simple-question}
+pinkstyle::question(text = "Is this question displaying correctly?")
 ```
 
-You can also include a question using inline code e.g. `` `r knitr::inline_expr("msmbstyle::question()")` ``.  This is perhaps simpler than using code chunks, since it is unlikely we ever want to display the function call itself.  The question below is generated in this fashion.
+You can also include a question using inline code e.g. `` `r knitr::inline_expr("pinkstyle::question()")` ``.  This is perhaps simpler than using code chunks, since it is unlikely we ever want to display the function call itself.  The question below is generated in this fashion.
 
-`r msmbstyle::question(text = "This is our second question.  It should not be numbered.  Is it?")`
+`r pinkstyle::question(text = "This is our second question.  It should not be numbered.  Is it?")`
 
-In addition to the `text` argument, you can also provide a `label` to the function. `label` is optional, and if provided can be used to reference the label in the main text of the book. Labels for questions must start with the string '*ques:*'  In Question \@ref(ques:two) we can see an example of a labelled question that can be referenced (as seen in this sentence). 
+In addition to the `text` argument, you can also provide a `label` to the function. `label` is optional, and if provided can be used to reference the label in the main text of the book. Labels for questions must start with the string '*ques:*'  In Question \@ref(ques:two) we can see an example of a labelled question that can be referenced (as seen in this sentence).
 
 `r tufte::margin_note("Currently using references to a question will result in a warning such as '\x60The label(s) ques:two not found\x60'.  This is because **knitr** is unable to resolve the reference (since this is an addon).  This is irritating, but can be ignored, and may be addressed in the future")`
 
-`r msmbstyle::question(label = "ques:two", text = "This is our second question.  We expect this to have a number.")`
+`r pinkstyle::question(label = "ques:two", text = "This is our second question.  We expect this to have a number.")`
 
 #### Including `"code"` in a question. {-}
 
 In order to include text formated to look like R code in you can use the sequence '`\x60`' to represent the backticks inside the text argument e.g.
 
-`r msmbstyle::question(text = "Does this question include \x60x\x60 and \x60y\x60?")`
+`r pinkstyle::question(text = "Does this question include \x60x\x60 and \x60y\x60?")`
 
 ### More complex questions
 
@@ -56,9 +56,9 @@ If you need to provide more detail than a single paragraph in a question, you ca
 
 They can again be called either inline or in code chunks (inline seems simpler) within the R Markdown document, and it is imperative they be used as a pair, otherwise the resulting document will have missmatched HTML tags `r tufte::margin_note("currently there's no sanity checking for this, it's up to the author!")`.
 
-The example below shows a question that involves several paragraphs of text, along with a code block and the output created by running this code. 
+The example below shows a question that involves several paragraphs of text, along with a code block and the output created by running this code.
 
-`r msmbstyle::question_begin()`
+`r pinkstyle::question_begin()`
 
 This is a more complex question.  It involves both this text, some code, and the plot produced by that code.
 
@@ -68,24 +68,24 @@ plot( 1:10 )
 
 What do you think about the data shown in Figure \@ref(fig:longer-question)?
 
-`r msmbstyle::question_end()`
+`r pinkstyle::question_end()`
 
 ## Solutions
 
-In similar fasion to questions, you can insert solutions using either the function `msmbstyle::solution()`, or a combination of `msmbstyle::solution_begin()` & `msmbstyle::solution_end()`.  *Currently solutions can not be labelled or reference in the text.  This is primarily because of an assumption that they would always have an accompanying question that could be referenced, and may change in the future.*
+In similar fasion to questions, you can insert solutions using either the function `pinkstyle::solution()`, or a combination of `pinkstyle::solution_begin()` & `pinkstyle::solution_end()`.  *Currently solutions can not be labelled or reference in the text.  This is primarily because of an assumption that they would always have an accompanying question that could be referenced, and may change in the future.*
 
 ### Simple solution
 
-Again, if your solution is just a single a paragraph of text, you can use `msmbstyle::solution()` and provide the paragraph via the argument `text`.  We see an example of this approach below:
+Again, if your solution is just a single a paragraph of text, you can use `pinkstyle::solution()` and provide the paragraph via the argument `text`.  We see an example of this approach below:
 
-`r msmbstyle::solution(text = "This is a single paragraph providing an answer.")`
+`r pinkstyle::solution(text = "This is a single paragraph providing an answer.")`
 
 There are additional arguments to this function: `header` and `toggle`.  `header` allows you to set the headeing text that begins a solution e.g. if you would rather they were called 'answers'.  `toggle` expects a logical which, if set to `TRUE` (the default), will create the solution in a 'collapsed' format.  Pressing the plus icon will then show the content of the solution.  This gives the option of initially hiding a solution, so the reader is forced into taking an active step to reveal the answer.  
 
 Below is an example where the collapsing behaviour has been turned off and the section header renamed.
 
-```{r, simple-solution2} 
-msmbstyle::solution(text = "This an 'Answer' and cannot be hidden",
+```{r, simple-solution2}
+pinkstyle::solution(text = "This an 'Answer' and cannot be hidden",
                     header = "Answer",
                     toggle = FALSE)
 ```
@@ -94,7 +94,7 @@ msmbstyle::solution(text = "This an 'Answer' and cannot be hidden",
 
 More comprehensive solutions can similarly be indicated with calls to `solution_begin()` and `solution_end()`.  The first of these takes the same arguments as `solution()` allowing you to set the visibility toggle and section heading text.
 
-`r msmbstyle::solution_begin()`
+`r pinkstyle::solution_begin()`
 
 This is a more complex solution. We'll reuse some plotting code from the **tufte** vignette to include a figure in the margin.
 
@@ -109,8 +109,7 @@ ggplot(mtcars2, aes(hp, mpg, color = am)) +
   theme(legend.position = 'bottom')
 ```
 
-`r msmbstyle::solution_end()`
+`r pinkstyle::solution_end()`
 
 
 Everything including the margin figure is contained within our 'collapsed' solution environment and can be revealed by clicking on the plus symbol.
-
