--- a/inst/rmarkdown/templates/pink_html/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/pink_html/skeleton/skeleton.Rmd
@@ -10,7 +10,7 @@ output:
     toc_depth: 1
     split_by: chapter
     margin_references: FALSE
-    css: msmb.css
+    css: pink.css
 bibliography: skeleton.bib
 link-citations: yes
 ---
